--- a/src/cwLayoutTree.less
+++ b/src/cwLayoutTree.less
@@ -1,40 +1,37 @@
 .cwLayoutTree {
-	.node {
-    cursor: pointer;
+  svg{
+    cursor: all-scroll;
   }
-
-  .overlay{
-      background-color:#EEE;
+  .centralText{
+    font: 23spx sans-serif;
+    fill: #222;
+    font-weight: bold;
   }
-   
-  .node circle {
+  .downwardNode circle{
     fill: #fff;
-    stroke: steelblue;
-    stroke-width: 1.5px;
+    stroke: #8b4513;
+    stroke-width: 2.5px;
   }
-   
-  .node text {
-    font-size:10px; 
-    font-family:sans-serif;
+  .upwardNode circle {
+    fill: #fff;
+    stroke: #37592b;
+    stroke-width: 2.5px;
   }
-   
-  .link {
+  .downwardNode text,
+  .upwardNode text {
+    font: 12px sans-serif;
+    font-weight:bold;
+  }
+  .downwardLink {
     fill: none;
-    stroke: #ccc;
-    stroke-width: 1.5px;
-  }
-
-  .templink {
-    fill: none;
-    stroke: red;
+    stroke: #8b4513;
     stroke-width: 3px;
+    opacity: 0.2;
   }
-
-  .ghostCircle.show{
-      display:block;
-  }
-
-  .ghostCircle, .activeDrag .ghostCircle{
-       display: none;
+  .upwardLink {
+    fill: none;
+    stroke: #37592b;
+    stroke-width: 3px;
+    opacity: 0.2;
   }
 }
