--- a/src/cwLayoutTree.css
+++ b/src/cwLayoutTree.css
@@ -1,33 +1,33 @@
-svg{
+#cwLayoutTree svg {
   cursor: all-scroll;
 }
-.centralText{
+#cwLayoutTree .centralText {
   font: 23spx sans-serif;
   fill: #222;
   font-weight: bold;
 }
-.downwardNode circle{
+#cwLayoutTree .downwardNode circle {
   fill: #fff;
   stroke: #8b4513;
   stroke-width: 2.5px;
 }
-.upwardNode circle {
+#cwLayoutTree .upwardNode circle {
   fill: #fff;
   stroke: #37592b;
   stroke-width: 2.5px;
 }
-.downwardNode text,
-.upwardNode text {
+#cwLayoutTree .downwardNode text,
+#cwLayoutTree .upwardNode text {
   font: 12px sans-serif;
-  font-weight:bold;
+  font-weight: bold;
 }
-.downwardLink {
+#cwLayoutTree .downwardLink {
   fill: none;
   stroke: #8b4513;
   stroke-width: 3px;
   opacity: 0.2;
 }
-.upwardLink {
+#cwLayoutTree .upwardLink {
   fill: none;
   stroke: #37592b;
   stroke-width: 3px;
