--- a/src/cwLayoutTree.less
+++ b/src/cwLayoutTree.less
@@ -1,13 +1,13 @@
 .cwLayoutTree {
-  svg{
+  svg {
     cursor: all-scroll;
   }
-  .centralText{
+  .centralText {
     font: 23spx sans-serif;
     fill: #222;
     font-weight: bold;
   }
-  .downwardNode circle{
+  .downwardNode circle {
     fill: #fff;
     stroke: #8b4513;
     stroke-width: 2.5px;
@@ -20,18 +20,22 @@
   .downwardNode text,
   .upwardNode text {
     font: 12px sans-serif;
-    font-weight:bold;
+    font-weight: bold;
   }
   .downwardLink {
     fill: none;
-    stroke: #8b4513;
+    //stroke: #8b4513;
     stroke-width: 3px;
-    opacity: 0.2;
+    opacity: 0.4;
   }
   .upwardLink {
     fill: none;
-    stroke: #37592b;
+    //stroke: #37592b;
     stroke-width: 3px;
-    opacity: 0.2;
+    opacity: 0.4;
+  }
+
+  foreignObject {
+    overflow: inherit;
   }
 }
