Added Export Mode to tree

--- a/src/cwLayoutTree.css
+++ b/src/cwLayoutTree.css
@@ -1,36 +1,242 @@
-.cwLayoutTree svg {
+/* CUSTOM VARIABLES */
+/* GLOBAL */
+/* LOGIN */
+/* DIAGRAM */
+/* HOME PAGE */
+/* MENU LEFT */
+/* MAIN MENU */
+/* SUB MENU */
+/* PAGE TAB */
+/* DROPDOWN NOTIFICATIONS */
+/* SOCIAL */
+/* LIST BOX */
+/* PROPERTIES GROUP */
+/* BUTTONS */
+/* PAGE ACTIONS */
+/* ACCORDIONS */
+/* DISCUSSIONS */
+/* WORLD MAP */
+/* USER ZONE */
+/* POPUP */
+/* BADGES */
+/* TASKS & NOTIFICATIONS */
+/* GLOBAL SEARCH */
+/* TOP BAR */
+/* DIAGRAM TILE */
+/* MATRIX ADVANCED */
+/* DIAGRAM OVERLAY */
+.cwLayoutTree {
+  width: 100%;
+}
+.cwLayoutTree .cwLayoutTreeD3Tree svg {
   cursor: all-scroll;
 }
-.cwLayoutTree .centralText {
+.cwLayoutTree .cwLayoutTreeD3Tree .centralText {
   font: 23spx sans-serif;
   fill: #222;
   font-weight: bold;
 }
-.cwLayoutTree .downwardNode circle {
+.cwLayoutTree .cwLayoutTreeD3Tree .downwardNode circle {
   fill: #fff;
   stroke: #8b4513;
   stroke-width: 2.5px;
 }
-.cwLayoutTree .upwardNode circle {
+.cwLayoutTree .cwLayoutTreeD3Tree .upwardNode circle {
   fill: #fff;
   stroke: #37592b;
   stroke-width: 2.5px;
 }
-.cwLayoutTree .downwardNode text,
-.cwLayoutTree .upwardNode text {
+.cwLayoutTree .cwLayoutTreeD3Tree .downwardNode text,
+.cwLayoutTree .cwLayoutTreeD3Tree .upwardNode text {
   font: 12px sans-serif;
   font-weight: bold;
 }
-.cwLayoutTree .downwardLink {
+.cwLayoutTree .cwLayoutTreeD3Tree .downwardLink {
   fill: none;
   stroke-width: 3px;
   opacity: 0.4;
 }
-.cwLayoutTree .upwardLink {
+.cwLayoutTree .cwLayoutTreeD3Tree .upwardLink {
   fill: none;
   stroke-width: 3px;
   opacity: 0.4;
 }
-.cwLayoutTree foreignObject {
+.cwLayoutTree .cwLayoutTreeD3Tree foreignObject {
   overflow: inherit;
+}
+.cwLayoutTree .cwLayoutTreeExpertModeButton {
+  position: absolute;
+}
+.cwLayoutTreeExpertModeConfig div.cwLayoutTreeExpertModeContainerTab {
+  display: flex;
+}
+.cwLayoutTreeExpertModeConfig div.cwLayoutTreeExpertModeTabs {
+  margin: 5px;
+  transition: box-shadow 0.3s;
+  color: rgba(0, 0, 0, 0.8);
+  display: block;
+  height: 48px;
+  line-height: 48px;
+  padding: 0 1rem;
+  box-shadow: inset 0 -2px #000000;
+  cursor: pointer;
+}
+.cwLayoutTreeExpertModeConfig div.cwLayoutTreeExpertModeTabs .selected {
+  box-shadow: inset 0 -2px #03a0ce;
+}
+.cwLayoutTreeExpertModeConfig .cwLayout_expertModeTableSelect {
+  line-height: 0px;
+}
+.cwLayoutTreeExpertModeConfig .expertModeGroupTable td > input,
+.cwLayoutTreeExpertModeConfig .expertModeGroupTable textarea {
+  width: 100%;
+}
+.cwLayoutTreeExpertModeConfig div.rowFlex {
+  margin: 5px 0px;
+}
+.cwLayoutTreeExpertModeConfig div.rowFlex div.row-cell {
+  display: inline-block;
+}
+.cwLayoutTreeExpertModeConfig div.rowFlex div.row-cell-label {
+  max-width: 400px;
+  vertical-align: top;
+  font-size: large;
+  font-weight: 700;
+  color: #03a0ce;
+}
+.cwLayoutTreeExpertModeConfig div.rowFlex div.row-cell-value-textarea {
+  width: 80%;
+}
+.cwLayoutTreeExpertModeConfig div.rowFlex .tableTextInput input {
+  width: 100%;
+}
+.cwLayoutTreeExpertModeConfig div.rowFlex .tableTextInput input {
+  border-radius: 4px;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border: 1px solid #cccccc;
+  height: 34px;
+}
+.cwLayoutTreeExpertModeConfig div.rowFlex .noWhiteSpace {
+  white-space: inherit;
+}
+.cwLayoutTreeExpertModeConfig div.rowFlex div.row-cell-value select {
+  border-radius: 4px;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border: 1px solid #cccccc;
+  padding: 0px 5px;
+  height: 30px;
+  background-color: white;
+}
+.cwLayoutTreeExpertModeConfig div.rowFlex div.row-cell-value input {
+  border-radius: 4px;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border: 1px solid #cccccc;
+  padding: 0px 5px;
+  height: 30px;
+  background-color: white;
+}
+.cwLayoutTreeExpertModeConfig div.rowFlex div.row-cell-value textarea {
+  border-radius: 4px;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border: 1px solid #cccccc;
+  padding: 0px 5px;
+  min-height: 30px;
+  resize: vertical;
+  background-color: white;
+}
+.cwLayoutTreeExpertModeConfig div.rowFlex div.row-cell-value.row-cell-max-width {
+  width: 85%;
+}
+.cwLayoutTreeExpertModeConfig div.rowFlex div.row-cell-value.row-cell-max-width .fullWidthFilterTable {
+  width: 100%;
+}
+.cwLayoutTreeExpertModeConfig div.rowFlex div.row-cell-value.row-cell-max-width .fullWidthFilterTable input {
+  width: 95%;
+}
+.cwLayoutTreeExpertModeConfig div.rowFlex div.row-cell-value.row-cell-max-width .fullWidthFilterTable input.smallCell {
+  width: 70px;
+}
+.cwLayoutTreeExpertModeConfig div.rowFlex div.row-cell-value.row-cell-max-width div.cell-content-wrapper {
+  width: 100%;
+  border: 1px solid #cccccc;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  padding: 0px 5px;
+}
+.cwLayoutTreeExpertModeConfig div.rowFlex div.row-cell-value.row-cell-max-width div.properties-wrapper {
+  overflow: auto;
+  max-height: 350px;
+}
+.cwLayoutTreeExpertModeConfig div.rowFlex div.row-cell-value.row-cell-max-width div.properties-wrapper input {
+  vertical-align: middle;
+  margin-right: 5px;
+}
+.cwLayoutTreeExpertModeConfig div.rowFlex div.row-cell-value.row-cell-max-width .filter-wrapper .filter-content {
+  width: 180px;
+}
+.cwLayoutTreeExpertModeConfig div.rowFlex div.row-cell-value.row-cell-max-width .filter-wrapper .filter-value {
+  width: 180px;
+}
+.cwLayoutTreeExpertModeConfig div.rowFlex div.row-cell-value.row-cell-max-width .filter-wrapper .filter-operator {
+  width: 100px;
+}
+.cwLayoutTreeExpertModeConfig div.rowFlex div.row-cell-value.row-cell-max-width .filter-wrapper .filter-cell {
+  margin: 5px;
+  text-align: center;
+  vertical-align: middle;
+}
+.cwLayoutTreeExpertModeConfig div.rowFlex div.row-cell-value.row-cell-max-width .filter-wrapper .filter-cell input[type="checkbox"] {
+  margin: 0px;
+}
+.cwLayoutTreeExpertModeConfig div.rowFlex div.row-cell-value.row-cell-max-width .header-cell {
+  text-align: center;
+  font-weight: bold;
+}
+.cwLayoutTreeExpertModeConfig div.rowFlex .add-filter-button a.btn-add-filter {
+  height: auto;
+  width: auto;
+  margin: 5px;
+  color: #ffffff;
+}
+.cwLayoutTreeExpertModeConfig div.cwPropertiesTableContainer {
+  width: 99%;
+}
+.cwLayoutTreeExpertModeConfig div.cwPropertiesTableContainer td.expertmode_table-buttonlist {
+  white-space: inherit;
+  width: 100%;
+}
+.cwLayoutTreeExpertModeConfig div.cwPropertiesTableContainer td.expertmode_table-buttonlist div {
+  white-space: inherit;
+  padding-bottom: 2px;
+}
+.cwLayoutTreeExpertModeConfig div.cwPropertiesTableContainer td.expertmode_table-buttonlist div a {
+  width: 100%;
+  display: inline-block;
+  padding: 6px 2px;
+  margin-bottom: 0;
+  font-size: 11px;
+  font-weight: normal;
+  line-height: 1.42857143;
+  text-align: center;
+  white-space: inherit;
+  vertical-align: middle;
+  -ms-touch-action: manipulation;
+  touch-action: manipulation;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  background-image: none;
+  border: 1px solid transparent;
+  border-radius: 4px;
+}
+.cwLayoutTreeExpertModeConfig div.cwPropertiesTableContainer td.expertmode_table-buttonlist div a.selected {
+  background-color: #03b4e7;
+  border-color: #546e7a;
 }
